cmake_minimum_required(VERSION 3.10)
project(FiguresProject)
set(CMAKE_CXX_STANDARD 14)
include_directories(include)
add_executable(main main.cpp src/figures.cpp)
enable_testing()
find_package(GTest REQUIRED)
add_executable(tests test/test.cpp src/figures.cpp)
target_link_libraries(tests GTest::GTest GTest::Main)
add_test(NAME FiguresTests COMMAND tests)